# rancher-mcp-proxy

./: CLAUDE.md  Cargo.toml  Dockerfile  README.md  ai-agent-config.yaml
.github/workflows/: build.yaml
charts/rancher-finops-agent/: Chart.yaml  values.yaml
charts/rancher-finops-agent/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
charts/rancher-mcp-proxy/: Chart.yaml  values.yaml
charts/rancher-mcp-proxy/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  ingress.yaml  service.yaml
src/: config.rs  gateway.rs  main.rs  rancher_auth.rs  upstream.rs
